fix: 폴더구조/package.json 정리
