# back/src/routes/diaryRouter.ts
@@ -1,12 +1,0 @@
-import { Router } from "express";
-import DiaryController from "repositories/diaryController";
-
-const diaryRouter: Router = Router();
-
-diaryRouter.post("/:userId/diaries", DiaryController.createDiary);
-diaryRouter.get("/:userId/diaries", DiaryController.getDiaries);
-diaryRouter.get("/diaries/:id", DiaryController.getDiaryById);
-diaryRouter.put("/diaries/:id", DiaryController.updateDiary);
-diaryRouter.delete("/diaries/:id", DiaryController.deleteDiary);
-
-export default diaryRouter;
