# back/src/routes/likeRouter.ts
@@ -1,9 +1,0 @@
-import LikeController from "repositories/likeController";
-import { Router } from "express";
-
-const likeRouter: Router = Router();
-
-likeRouter.post("/:boardId/like", LikeController.LikePost);
-likeRouter.get("/:boardId/likes", LikeController.getLikes);
-
-export default likeRouter;
